Login screen mobile alignment fixes

--- a/src/Views/StaticSite/Views/Authentication/Views/SignIn/style.scss
+++ b/src/Views/StaticSite/Views/Authentication/Views/SignIn/style.scss
@@ -6,6 +6,7 @@
         form{
             margin-top: 20px;
             label{
+                @media screen and (max-width: 599px) {width: 90vw !important;}
                 display: flex;
                 align-items: center;
                 border: 1px solid #bbb;
@@ -18,6 +19,7 @@
                 margin: 2rem auto;
             }
             input{
+                
                 border: none;
                 //margin-left: 1rem;
                 font-size: 1.25rem;
@@ -53,7 +55,10 @@
         height: fit-content;
         width: 100%;
         text-align: center;
+        @media screen and (max-width: 599px) {margin-top:36px}
+
         &>div{
+            @media screen and (max-width: 599px) {width: 90vw !important}
             width: 250px;
             margin: 0;  
         }
@@ -118,7 +123,7 @@
             }
         }
         .social-logins{
-            width: 50%;
+            width: 90%;
         }
         .signin-btn{
             border: none;
